--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2609, 384)\n",
-      "Exercise Transform Data(Tuple) Count: 2609\n"
+      "Raw Data Count(Exercises, Days): (2631, 388)\n",
+      "Exercise Transform Data(Tuple) Count: 2631\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 384\n"
+      "Exercise Days: 388\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
       "('Anold Press[Dumbbell]', 1)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Assisted Pull-Up[Machine]', 85)\n",
+      "('Assisted Pull-Up[Machine]', 86)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -201,16 +201,16 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 69)\n",
+      "('Chest Fly[Pec Deck Machine]', 71)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 113)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 21)\n",
+      "('Dips', 23)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 75)\n",
+      "('Flat Bench Press[Barbell]', 76)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -219,31 +219,31 @@
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 16)\n",
+      "('Hack Squat[Machine]', 17)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 36)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 98)\n",
-      "('Hip Adduction[Machine]', 89)\n",
+      "('Hip Abduction[Machine]', 99)\n",
+      "('Hip Adduction[Machine]', 90)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 54)\n",
+      "('Incline Bench Press[Machine]', 56)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 126)\n",
-      "('Leg Extension[Machine]', 73)\n",
-      "('Long Pull Row[Cable]', 91)\n",
+      "('Lat Pulldown[Machine]', 127)\n",
+      "('Leg Extension[Machine]', 75)\n",
+      "('Long Pull Row[Cable]', 92)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 139)\n",
+      "('Lying Leg Curls[Machine]', 140)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 25)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -260,14 +260,14 @@
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 45)\n",
-      "('Running', 76)\n",
+      "('Running', 77)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 94)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 88)\n",
-      "('Shoulder Press[Machine]', 96)\n",
-      "('Side Lateral Raise[Dumbbell]', 90)\n",
+      "('Seated Row[Machine]', 89)\n",
+      "('Shoulder Press[Machine]', 97)\n",
+      "('Side Lateral Raise[Dumbbell]', 91)\n",
       "('Side Lateral Raise[Machine]', 13)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -318,30 +318,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 139)\n",
-      "('Lat Pulldown[Machine]', 126)\n",
+      "('Lying Leg Curls[Machine]', 140)\n",
+      "('Lat Pulldown[Machine]', 127)\n",
       "('Deadlift[Barbell]', 113)\n",
       "('Plank', 104)\n",
-      "('Hip Abduction[Machine]', 98)\n",
-      "('Shoulder Press[Machine]', 96)\n",
+      "('Hip Abduction[Machine]', 99)\n",
+      "('Shoulder Press[Machine]', 97)\n",
       "('Seated Chest Press[Machine]', 94)\n",
-      "('Long Pull Row[Cable]', 91)\n",
-      "('Side Lateral Raise[Dumbbell]', 90)\n",
-      "('Hip Adduction[Machine]', 89)\n",
-      "('Seated Row[Machine]', 88)\n",
-      "('Assisted Pull-Up[Machine]', 85)\n",
-      "('Running', 76)\n",
-      "('Flat Bench Press[Barbell]', 75)\n",
+      "('Long Pull Row[Cable]', 92)\n",
+      "('Side Lateral Raise[Dumbbell]', 91)\n",
+      "('Hip Adduction[Machine]', 90)\n",
+      "('Seated Row[Machine]', 89)\n",
+      "('Assisted Pull-Up[Machine]', 86)\n",
+      "('Running', 77)\n",
+      "('Flat Bench Press[Barbell]', 76)\n",
+      "('Leg Extension[Machine]', 75)\n",
       "('Power Leg Press[Machine]', 74)\n",
-      "('Leg Extension[Machine]', 73)\n",
+      "('Chest Fly[Pec Deck Machine]', 71)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Chest Fly[Pec Deck Machine]', 69)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
-      "('Incline Bench Press[Machine]', 54)\n",
+      "('Incline Bench Press[Machine]', 56)\n",
       "('Back Extension', 45)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 45)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 36)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
@@ -349,86 +349,86 @@
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 25)\n",
+      "('Dips', 23)\n",
       "('Wrist Roller', 22)\n",
-      "('Dips', 21)\n",
       "('Bent Over Row[Barbell]', 20)\n",
-      "('Upright Row[EZ Curl Bar]', 19)\n",
       "('Split Squat[Smith Machine]', 19)\n",
+      "('Upright Row[EZ Curl Bar]', 19)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Hack Squat[Machine]', 16)\n",
+      "('Hack Squat[Machine]', 17)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
-      "('Biceps Curls[Machine]', 13)\n",
       "('Side Lateral Raise[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
+      "('Biceps Curls[Machine]', 13)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Push-Up', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Push-Up', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Hip Thrust', 5)\n",
       "('Body-Weight Squat', 5)\n",
-      "('Reverse Crunch', 4)\n",
+      "('Hip Thrust', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Reverse Crunch', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Trx Row', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Dead Bug', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Walking', 2)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Trx Lunge', 1)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
       "('Anold Press[Dumbbell]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Hip Abduction', 1)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n"
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n"
      ]
     }
    ],
