--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2662, 393)\n",
-      "Exercise Transform Data(Tuple) Count: 2662\n"
+      "Raw Data Count(Exercises, Days): (2700, 399)\n",
+      "Exercise Transform Data(Tuple) Count: 2700\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 393\n"
+      "Exercise Days: 399\n"
      ]
     }
    ],
@@ -183,11 +183,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Ab Rollout[Ab Wheel]', 3)\n",
-      "('Anold Press[Dumbbell]', 2)\n",
+      "('Ab Rollout[Ab Wheel]', 8)\n",
+      "('Anold Press[Dumbbell]', 3)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Assisted Pull-Up[Machine]', 88)\n",
+      "('Assisted Pull-Up[Machine]', 90)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -202,14 +202,14 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 73)\n",
+      "('Chest Fly[Pec Deck Machine]', 74)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 114)\n",
+      "('Deadlift[Barbell]', 115)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 25)\n",
+      "('Dips', 27)\n",
       "('Face Pulls[Cable]', 1)\n",
       "('Flat Bench Press[Barbell]', 77)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
@@ -226,26 +226,27 @@
       "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 100)\n",
-      "('Hip Adduction[Machine]', 91)\n",
+      "('Hip Abduction[Machine]', 102)\n",
+      "('Hip Adduction[Machine]', 92)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 58)\n",
+      "('Incline Bench Press[Machine]', 60)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 128)\n",
-      "('Leg Extension[Machine]', 77)\n",
-      "('Long Pull Row[Cable]', 94)\n",
+      "('Lat Pulldown[Machine]', 130)\n",
+      "('Leg Extension[Machine]', 79)\n",
+      "('Long Pull Row[Cable]', 96)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 142)\n",
+      "('Lying Leg Curls[Machine]', 143)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Military Press[Dumbbell]', 1)\n",
       "('Military Press[Smith Machine]', 25)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
@@ -253,22 +254,22 @@
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Kettlebell]', 39)\n",
+      "('One Leg Deadlift[Kettlebell]', 41)\n",
       "('Plank', 104)\n",
       "('Power Leg Press[Machine]', 74)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 46)\n",
-      "('Running', 77)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 48)\n",
+      "('Running', 80)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Seated Chest Press[Machine]', 95)\n",
+      "('Seated Chest Press[Machine]', 96)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 90)\n",
-      "('Shoulder Press[Machine]', 98)\n",
-      "('Side Lateral Raise[Dumbbell]', 92)\n",
+      "('Seated Row[Machine]', 91)\n",
+      "('Shoulder Press[Machine]', 100)\n",
+      "('Side Lateral Raise[Dumbbell]', 94)\n",
       "('Side Lateral Raise[Machine]', 13)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -319,118 +320,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 142)\n",
-      "('Lat Pulldown[Machine]', 128)\n",
-      "('Deadlift[Barbell]', 114)\n",
+      "('Lying Leg Curls[Machine]', 143)\n",
+      "('Lat Pulldown[Machine]', 130)\n",
+      "('Deadlift[Barbell]', 115)\n",
       "('Plank', 104)\n",
-      "('Hip Abduction[Machine]', 100)\n",
-      "('Shoulder Press[Machine]', 98)\n",
-      "('Seated Chest Press[Machine]', 95)\n",
-      "('Long Pull Row[Cable]', 94)\n",
-      "('Side Lateral Raise[Dumbbell]', 92)\n",
-      "('Hip Adduction[Machine]', 91)\n",
-      "('Seated Row[Machine]', 90)\n",
-      "('Assisted Pull-Up[Machine]', 88)\n",
-      "('Running', 77)\n",
-      "('Leg Extension[Machine]', 77)\n",
+      "('Hip Abduction[Machine]', 102)\n",
+      "('Shoulder Press[Machine]', 100)\n",
+      "('Long Pull Row[Cable]', 96)\n",
+      "('Seated Chest Press[Machine]', 96)\n",
+      "('Side Lateral Raise[Dumbbell]', 94)\n",
+      "('Hip Adduction[Machine]', 92)\n",
+      "('Seated Row[Machine]', 91)\n",
+      "('Assisted Pull-Up[Machine]', 90)\n",
+      "('Running', 80)\n",
+      "('Leg Extension[Machine]', 79)\n",
       "('Flat Bench Press[Barbell]', 77)\n",
       "('Power Leg Press[Machine]', 74)\n",
-      "('Chest Fly[Pec Deck Machine]', 73)\n",
+      "('Chest Fly[Pec Deck Machine]', 74)\n",
       "('Assisted Dips[Machine]', 70)\n",
+      "('Incline Bench Press[Machine]', 60)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
-      "('Incline Bench Press[Machine]', 58)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 46)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 48)\n",
       "('Back Extension', 45)\n",
-      "('One Leg Deadlift[Kettlebell]', 39)\n",
+      "('One Leg Deadlift[Kettlebell]', 41)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Wide Pulldown Rear[Machine]', 36)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
+      "('Dips', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 25)\n",
-      "('Dips', 25)\n",
       "('Wrist Roller', 22)\n",
       "('Bent Over Row[Barbell]', 20)\n",
-      "('Split Squat[Smith Machine]', 19)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Hack Squat[Machine]', 18)\n",
+      "('Split Squat[Smith Machine]', 19)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Hack Squat[Machine]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
-      "('Side Lateral Raise[Machine]', 13)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Pull-Up', 12)\n",
+      "('Side Lateral Raise[Machine]', 13)\n",
       "('Push-Up', 12)\n",
+      "('Pull-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
+      "('Ab Rollout[Ab Wheel]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Ab Rollout[Ab Wheel]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Anold Press[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Dead Bug', 2)\n",
-      "('Anold Press[Dumbbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Walking', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
       "('Hip Abduction', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Split Squat', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
+      "('Trx Lunge', 1)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n"
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Military Press[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n"
      ]
     }
    ],
